# SpectralMDL

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  build.sh  testing.mdl
cmake/: Dependencies.cmake  Git.cmake  Options.cmake  SpectralMDLConfig.cmake.in
docs/: CNAME  Gemfile  _config.yml
docs/_docs/: command-line.adoc  extensions.adoc  function-attributes.adoc  index.adoc  intrinsics.adoc  language-design.adoc  language-extensions.adoc  list-function-attributes.adoc  list-intrinsics.adoc  rebuild.sh  smdl.rb  stylesheet.css
docs/_posts/: 2024-11-09-welcome-to-jekyll.markdown
docs/docs/: command-line.html  extensions.html  function-attributes.html  index.html  intrinsics.html  language-design.html  language-extensions.html  list-function-attributes.html  list-intrinsics.html
etc/: mdl.vim
include/smdl/: AST.h  Archive.h  BSDFMeasurement.h  BumpPtrAllocator.h  Common.h  Compiler.h  DefaultImageLoader.h  DiscreteDistribution.h  Distribution.h  FileLocator.h  Formatter.h  Image.h  ImageLoader.h  JIT.h  LightProfile.h  Logger.h  MD5Hash.h  MDLInstance.h  MeasuredBSDF.h  Module.h  Parser.h  SceneData.h  Spectrum.h  common.h  type.h  types.h
include/smdl/AST/: Decl.h  Expr.h  File.h  Node.h  Stmt.h
include/smdl/Support/: BumpPtrAllocator.h  ColorVector.h  DiscreteDistribution.h  Error.h  Filesystem.h  Logger.h  MD5Hash.h  MacroHelpers.h  Parallel.h  Profiler.h  Sampling.h  SemanticVersion.h  Span.h  SpectralData.h  SpectralRenderImage.h  StringHelpers.h  VectorMath.h
lib/: AST.cc  AST.h  Archive.cc  Archive.h  BSDFMeasurement.cc  BumpPtrAllocator.cc  CMakeLists.txt  Common.cc  Compiler.cc  DataLookup.cc  DataLookup.h  DefaultImageLoader.cc  DiscreteDistribution.cc  Distribution.cc  FileLocator.cc  Formatter.cc  Formatter.h  Image.cc  ImageLoader.cc  LightProfile.cc  Logger.cc  MD5Hash.cc  MDLInstance.cc  MeasuredBSDF.cc  Module.cc  Parser.cc  Parser.h  SceneData.cc  Spectrum.cc  common.cc  filesystem.cc  filesystem.h  foreign.cc  llvm.cc  llvm.h  ptex.cc  type.cc  types.cc
lib/Compiler/: Context.cc  Context.h  Emitter.cc  Emitter.h  Function.cc  Function.h  Module.cc  Module.h  Type.cc  Type.h  Value.cc  Value.h  builtin.h  builtin.h.rb  builtin.rb  builtins.h  builtins.rb  llvm.cc  llvm.h  replace.rb
lib/Compiler/builtin/: API.smdl  PCG32.smdl  PROSPECT.smdl  anno.smdl  api.smdl  debug.smdl  df.smdl  io.smdl  limits.smdl  marmit.smdl  math.smdl  monte_carlo.smdl  pcg32.smdl  prospect.smdl  quat.smdl  rgb.smdl  scene.smdl  specular.smdl  state.smdl  std.smdl  tex.smdl
lib/Compiler/builtin/albedo/: Plot.py  diffuse_reflection_bsdf.inl  microfacet_beckmann_smith_bsdf.inl  microfacet_ggx_smith_bsdf.inl  sheen_bsdf.inl  simple_glossy_bsdf.inl  tabulate.smdl  ward_geisler_moroder_bsdf.inl
lib/Compiler/builtins/: anno.smdl  debug.mdl  df.mdl  df.smdl  df.smdl.bak  df_api.smdl  fresnel.smdl  limits.mdl  math.mdl  math.smdl  microfacet.mdl  microfacet.smdl  quaternion.smdl  rgb.mdl  rgb.smdl  scene.mdl  specular.smdl  state.mdl  std.mdl  tex.mdl  tex.smdl
lib/Support/: BumpPtrAllocator.cc  DiscreteDistribution.cc  Error.cc  Filesystem.cc  Logger.cc  MD5Hash.cc  MacroHelpers.cc  Parallel.cc  Profiler.cc  Sampling.cc  SemanticVersion.cc  SpectralData.cc  SpectralRenderImage.cc  StringHelpers.cc
lib/unit_tests/: BSDFMeasurement.cc  CMakeLists.txt  DiscreteDistribution.cc  LightProfile.cc  MD5Hash.cc  Sampling.cc  doctest.cc
materialx/: README.md  core.mdl  noise.mdl  sampling.mdl  stdlib_1_6.mdl  stdlib_1_8.mdl  stdlib_1_9.mdl
src/: CMakeLists.txt
src/common/: cl.h  command_line.h
src/smdl/: CMakeLists.txt  main.cc
src/smdl-toy/: BDPTIntegrator.cc  BDPTIntegrator.h  BidirConnector.cc  BidirConnector.h  CMakeLists.txt  Camera.cc  Camera.h  EnvLight.cc  EnvLight.h  Integrator.cc  Integrator.h  Light.cc  Light.h  MLTIntegrator.cc  MLTIntegrator.h  Metropolis.cc  Metropolis.h  PathIntegrator.cc  PathIntegrator.h  Scene.cc  Scene.h  Vertex.cc  Vertex.h  cli.h  command_line.h  common.h  light.cc  light.h  main.cc  raytracing.cc  raytracing.h  rt.cc  rt.h  vertex.cc  vertex.h
src/smdl-toy/integrators/: BDPTIntegrator.cc  BDPTIntegrator.h  PSMLTIntegrator.cc  PSMLTIntegrator.h  PTIntegrator.cc  PTIntegrator.h  PTLightIntegrator.cc  PTLightIntegrator.h
src/smdl-toy/lights/: AmbientLight.cc  AmbientLight.h  DirectionLight.cc  DirectionLight.h  DiskLight.cc  DiskLight.h  PointLight.cc  PointLight.h  SpotLight.cc  SpotLight.h
src/smdlc/: CMakeLists.txt  main.cc
tests/: 4x4.exr  bump.smdl  clock.smdl  complex_numbers.smdl  crumb_regressions.smdl  crumbs_a.smdl  crumbs_b.smdl  crumbs_c.smdl  crumbs_d.smdl  crumbs_e.smdl  decl_a.smdl  decl_b.smdl  decl_c.smdl  decl_d.smdl  decl_e.smdl  decl_regressions.smdl  defaults.smdl  deferred_size_arrays.smdl  destructure.smdl  df.smdl  else_expressions.smdl  finalize.smdl  function_variants.smdl  generic_structs.mdl  generic_structs.smdl  implicit_unions.mdl  implied_type_switching.mdl  implied_type_switching.smdl  implied_unions.mdl  implied_unions.smdl  importee.smdl  importer.smdl  inferred_size_arrays.smdl  intrinsics.smdl  math.smdl  monte_carlo.smdl  recursion.smdl  regressions.smdl  return_from.smdl  rgb_brdf.mbsdf  (+9 more)
tests/package1/: foo.smdl
tests/package2/: bar.smdl
